added dark and light themes, changed application UI, created inverse bool converter for IsChecked property

--- a/CryptocurrenciesCollector/App.xaml
+++ b/CryptocurrenciesCollector/App.xaml
@@ -6,9 +6,11 @@
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="Theme/MenuButtonTheme.xaml"/>
-                <ResourceDictionary Source="Theme/TextboxTheme.xaml"/>
-                <ResourceDictionary Source="Theme/SettingsMenuButtonTheme.xaml"/>
+                <ResourceDictionary Source="Themes/MenuButtonStyle.xaml"/>
+                <ResourceDictionary Source="Themes/TextboxStyle.xaml"/>
+                <ResourceDictionary Source="Themes/SettingsMenuButtonStyle.xaml"/>
+                <ResourceDictionary Source="Themes/LightTheme.xaml"/>
+                <ResourceDictionary Source="Themes/DarkTheme.xaml"/>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
