--- a/CryptocurrenciesCollector/Pages/SearchPage.xaml
+++ b/CryptocurrenciesCollector/Pages/SearchPage.xaml
@@ -7,14 +7,20 @@
       d:DesignHeight="450" d:DesignWidth="800"
       Title="SearchPage">
 
-    <Grid >
+    <Grid>
         <TextBlock Text="Results"
-                   HorizontalAlignment="Center" VerticalAlignment="Top"
+                   HorizontalAlignment="Center" 
+                   VerticalAlignment="Top"
                    Margin="0 0 0 0"
-                   Grid.Row="0" Grid.Column="0" 
-                   FontSize="18" Foreground="White" FontWeight="Bold" FontFamily="Comic Sans MS"/>
+                   Grid.Row="0" 
+                   Grid.Column="0" 
+                   FontSize="18" 
+                   Foreground="{DynamicResource Text}"
+                   FontWeight="Bold" 
+                   FontFamily="Comic Sans MS"/>
         <ListView ItemsSource="{Binding SearchedCryptocurrencies}"
-                  HorizontalAlignment="Center" VerticalAlignment="Top"
+                  HorizontalAlignment="Center" 
+                  VerticalAlignment="Top"
                   Margin="0 35 0 15"
                   SelectedItem="{Binding SelectedSearchCryptocurrency, Mode=TwoWay}">
         <ListView.View>
