--- a/CryptocurrenciesCollector/Themes/MenuButtonStyle.xaml
+++ b/CryptocurrenciesCollector/Themes/MenuButtonStyle.xaml
@@ -2,7 +2,7 @@
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <Style BasedOn="{StaticResource {x:Type ToggleButton}}"
            TargetType="{x:Type RadioButton}"
-           x:Key="SettingsMenuButtonTheme">
+           x:Key="MenuButtonStyle">
         <Style.Setters>
             <Setter Property="Template">
                 <Setter.Value>
@@ -12,9 +12,8 @@
                               Background="{TemplateBinding Background}">
 
                             <TextBlock Text="{TemplateBinding Property=Content}"
-                                       VerticalAlignment="Center"
                                        HorizontalAlignment="Center"
-                                       Margin="0 0 0 0"/>
+                                       VerticalAlignment="Center"/>
                         </Grid>
                     </ControlTemplate>
                 </Setter.Value>
