--- a/CryptocurrenciesCollector/Themes/SettingsMenuButtonStyle.xaml
+++ b/CryptocurrenciesCollector/Themes/SettingsMenuButtonStyle.xaml
@@ -2,7 +2,7 @@
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <Style BasedOn="{StaticResource {x:Type ToggleButton}}"
            TargetType="{x:Type RadioButton}"
-           x:Key="MenuButtonTheme">
+           x:Key="SettingsMenuButtonStyle">
         <Style.Setters>
             <Setter Property="Template">
                 <Setter.Value>
@@ -13,7 +13,8 @@
 
                             <TextBlock Text="{TemplateBinding Property=Content}"
                                        VerticalAlignment="Center"
-                                       Margin="50 0 0 0"/>
+                                       HorizontalAlignment="Center"
+                                       Margin="0 0 0 0"/>
                         </Grid>
                     </ControlTemplate>
                 </Setter.Value>
