--- a/CryptocurrenciesCollector/Themes/TextboxStyle.xaml
+++ b/CryptocurrenciesCollector/Themes/TextboxStyle.xaml
@@ -1,13 +1,12 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <Style TargetType="{x:Type TextBox}"
-           x:Key="TextboxTheme">
+           x:Key="TextboxStyle">
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type TextBox}">
                     <Border CornerRadius="10"
-                            Background="#353340"
-                            Width="200" Height="40">
+                            Background="#1e2e44">
 
                         <Grid>
                             <Rectangle StrokeThickness="1"/>
@@ -21,7 +20,7 @@
                                      x:Name="SearchBox"/>
 
                             <TextBlock IsHitTestVisible="False"
-                                       Text="Search"
+                                       Text="Search here..."
                                        VerticalAlignment="Center"
                                        HorizontalAlignment="Left"
                                        Margin="10 0 0 0"
