--- a/CryptocurrenciesCollector/Pages/DetailInformationPage.xaml
+++ b/CryptocurrenciesCollector/Pages/DetailInformationPage.xaml
@@ -1,8 +1,11 @@
 ﻿<Page x:Class="CryptocurrenciesCollector.Pages.DetailInformationPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+      xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+      xmlns:helpers="clr-namespace:CryptocurrenciesCollector.Helpers.Behaviors;assembly=CryptocurrenciesCollector.Helpers"
+      xmlns:oxy="http://oxyplot.org/wpf"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
       Title="DetailInformationPage">
@@ -19,6 +22,10 @@
                 <RowDefinition Height="Auto"/>
                 <RowDefinition Height="*"/>
             </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="Auto"/>
+                <ColumnDefinition Width="*"/>
+            </Grid.ColumnDefinitions>
 
             <TextBlock Text="Cryptocurrency detail information"
                        Foreground="{DynamicResource Text}"
@@ -30,7 +37,8 @@
                        FontWeight="Bold" 
                        FontFamily="Comic Sans MS"/>
 
-            <Grid Margin="0 30 0 0">
+            <Grid Margin="0 30 0 0" 
+                  Grid.Row="0">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="Auto"/>
                     <ColumnDefinition Width="*"/>
@@ -132,6 +140,19 @@
                 </ListView.View>
             </ListView>
 
+
+
+            <Grid Grid.Column="1"
+                  Grid.RowSpan="2"
+                  Margin="15 0 0 0">
+                <oxy:PlotView x:Name="plotView"
+                              Model="{Binding CurrentPlotModel}">
+                    <i:Interaction.Behaviors>
+                        <helpers:PlotViewBehavior/>
+                    </i:Interaction.Behaviors>
+                </oxy:PlotView>
+            </Grid>
+            
         </Grid>
     </Grid>
 </Page>
