--- a/CryptocurrenciesCollector/Themes/MenuButtonStyle.xaml
+++ b/CryptocurrenciesCollector/Themes/MenuButtonStyle.xaml
@@ -25,7 +25,7 @@
 
         <Style.Triggers>
             <Trigger Property="IsChecked" Value="True">
-                <Setter Property="Background" Value="#22202f"/>
+                <Setter Property="Background" Value="{DynamicResource PressedButton}"/>
             </Trigger>
         </Style.Triggers>
 
