--- a/CryptocurrenciesCollector/Themes/TextboxStyle.xaml
+++ b/CryptocurrenciesCollector/Themes/TextboxStyle.xaml
@@ -6,7 +6,7 @@
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type TextBox}">
                     <Border CornerRadius="10"
-                            Background="#1e2e44">
+                            Background="{DynamicResource Card}">
 
                         <Grid>
                             <Rectangle StrokeThickness="1"/>
@@ -25,7 +25,7 @@
                                        HorizontalAlignment="Left"
                                        Margin="10 0 0 0"
                                        FontSize="11"
-                                       Foreground="DarkGray"
+                                       Foreground="{DynamicResource SubText}"
                                        Grid.Column="1">
 
                                 <TextBlock.Style>
